--- a/collection.html
+++ b/collection.html
@@ -1,12 +1,16 @@
-<!doctype html>
-<html lang="fr">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+    <title><!doctype html>
+        <html lang="fr">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport"
+                  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            <title>Document</title>
+        </head>
 <body>
 <div id="wrapper" class="wrapper" v-cloak>
     <div class="header">
@@ -18,44 +22,43 @@
 
         <h2 class="lesLivres" id="lesLivres">Les Livres</h2>
 
-            <div id="livres" v-for="l in filtrer">
+        <div id="livres" v-for="l in filtrer">
 
-                <img class="img-livre" :src="l.doc.visuel">
-                <h3>{{ l.doc.titre }}</h3>
-                <p class="auteur">
-                    {{ l.doc.auteur }}
-                </p>
-                <p class="edition">
-                    {{ l.doc.edition }}
-                </p>
-                <p class="genre">
-                    Genre(s) :
-                    <span v-for="liv in l.doc.genre"><?php echo "{{liv}} / "; ?></span>
-                </p>
+            <img class="img-livre" :src="l.doc.visuel">
+            <h3>{{ l.doc.titre }}</h3>
+            <p class="auteur">
+                {{ l.doc.auteur }}
+            </p>
+            <p class="edition">
+                {{ l.doc.edition }}
+            </p>
+            <p class="genre">
+                Genre(s) :
+                <span v-for="liv in l.doc.genre"><?php echo "{{liv}} / "; ?></span>
+            </p>
 
-                <p class="tome">
-                    {{ l.doc.tome }}
-                </p>
-                <p class="date_parution">
-                    {{ l.doc.date_parution }}
-                </p>
-                <p class="nb_pages">
-                    {{ l.doc.nb_pages }}
-                </p>
-                <p class="langue">
-                    {{ l.doc.langue }}
-                </p>
-                <p class="resume">
-                    {{ l.doc.resume }}
-                </p>
-                <p class="isbn">
-                    {{ l.doc.isbn }}
-                </p>
+            <p class="tome">
+                {{ l.doc.tome }}
+            </p>
+            <p class="date_parution">
+                {{ l.doc.date_parution }}
+            </p>
+            <p class="nb_pages">
+                {{ l.doc.nb_pages }}
+            </p>
+            <p class="langue">
+                {{ l.doc.langue }}
+            </p>
+            <p class="resume">
+                {{ l.doc.resume }}
+            </p>
+            <p class="isbn">
+                {{ l.doc.isbn }}
+            </p>
 
 
         </div>
-
-        <a href="appli.php"><button>> Ajouter un livre <</button></a>
+        <a href="appli.html"><button>> Ajouter un livre <</button></a>
     </div>
     <div class="footer">
         Footer
