--- a/appli.html
+++ b/appli.html
@@ -17,7 +17,7 @@
     <div class="content" v-if="affichage">
 
         <h2 class="lesLivres" id="lesLivres">Les Livres</h2>
-
+        <img src="/visuels/boza.jpg">
         <div id="livres" v-for="l in filtrer">
 
             <img class="img-livre" :src="l.doc.visuel">
