--- a/appli.html
+++ b/appli.html
@@ -8,7 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-<img src="/visuels/boza.jpg">
+
+<div id="image">
+    <img src="visuels/boza.jpg">
+</div>
+
 <div id="wrapper" class="wrapper" v-cloak>
     <div class="header">
         <div class="recherche">
