--- a/appli.html
+++ b/appli.html
@@ -29,7 +29,9 @@
             </p>
             <p class="genre">
                 Genre(s) :
-                <span v-for="liv in l.doc.genre"><?php echo "{{liv}} / "; ?></span>
+                <span v-for="liv in l.doc.genre">
+                    <?php echo "{{liv}} / "; ?>
+                </span>
             </p>
 
             <p class="tome">
@@ -87,12 +89,12 @@
                 console.log(err);
             });
 
-            /*dbUser.sync('https://5f27fc86-3f3f-472c-a0a4-d8e736af858d-bluemix:c1f2fabb64ca498b4b4e93f1e2672f0361facfce1c1d932b59020b0f47ba6419@5f27fc86-3f3f-472c-a0a4-d8e736af858d-bluemix.cloudantnosqldb.appdomain.cloud/db_utilisateur')
+            dbUser.sync('https://5f27fc86-3f3f-472c-a0a4-d8e736af858d-bluemix:c1f2fabb64ca498b4b4e93f1e2672f0361facfce1c1d932b59020b0f47ba6419@5f27fc86-3f3f-472c-a0a4-d8e736af858d-bluemix.cloudantnosqldb.appdomain.cloud/db_utilisateur', {live: true})
                 .then(function (doc) {
                     return dbUser.allDocs({include_docs: true})
                 }).catch(function (err) {
                 console.log(err);
-            });*/
+            });
         },
 
         computed : {
@@ -120,7 +122,7 @@
         methods: {
             addLivre : function(id){
                 db.get(id).then(function(doc) {
-                    console.log(doc);
+                    console.log(dbUser);
                     return dbUser.put({
                         _id: doc._id,
                         visuel: doc.visuel,
