--- a/collection.html
+++ b/collection.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title><!doctype html>
-        <html lang="fr">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport"
-                  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-            <meta http-equiv="X-UA-Compatible" content="ie=edge">
-            <title>Document</title>
-        </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="book.list.css">
+    <title>Document</title>
+</head>
 <body>
 <div id="wrapper" class="wrapper" v-cloak>
     <div class="header">
+        <div class="titre">
+            <p>Livres</p>
+        </div>
         <div class="recherche">
-            Rechercher : <input type="text" v-model="searchString" placeholder="Entrer votre recherche" />
+            <label for="recherche">Rechercher:</label><input type="text" id="recherche" v-model="searchString" placeholder="Entrer votre recherche" />
         </div>
     </div>
     <div class="content" v-if="affichage">
-
-        <h2 class="lesLivres" id="lesLivres">Les Livres</h2>
-
         <div id="livres" v-for="l in filtrer">
 
             <img class="img-livre" :src="l.doc.visuel">
@@ -56,12 +53,21 @@
                 {{ l.doc.isbn }}
             </p>
 
-
         </div>
-        <a href="appli.html"><button>> Ajouter un livre <</button></a>
+        <a href="appli.html">
+            <button>> Ajouter un livre <</button>
+        </a>
     </div>
     <div class="footer">
-        Footer
+        <div class="picto-footer" id="account">
+            <img src="pictos/32/friends-32.png">
+        </div>
+        <div class="picto-footer" id="home">
+            <img src="pictos/32/home-32.png">
+        </div>
+        <div class="picto-footer" id="settings">
+            <img src="pictos/32/settings-32.png">
+        </div>
     </div>
 </div>
 
