Compteur nb média

--- a/appli.html
+++ b/appli.html
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="titre">
             <p>
-                Wishlist <span id="nb-medias"></span>
+                Wishlist (<span id="nb-medias"></span>)
             </p>
         </div>
         <div class="recherche">
